NetworkTimeView: Add missing default in MessageReceived switch.

Fixes #12652.